<resources>
    <string name="app_name">Engineer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button_signIn">Sign in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="importLabel">Import</string>
    <string name="galleryLabel">Gallery</string>
    <string name="slideshowLabel">Slideshow</string>
    <string name="toolsLabel">Tools</string>
    <string name="communicateLabel">Communicate</string>
    <string name="shareLabel">Share</string>
    <string name="sendLabel">Send</string>
    <string name="home">Home</string>
    <string name="login"/>
    <string name="register">register</string>
    <string name="nothing"/>
    <string name="delete_button">DELETE</string>
    <string name="edit_button">EDIT</string>
    <string name="name_hint">Name</string>
    <string name="description_hint">Description</string>
    <string name="rating_hint">Difficulty level</string>
    <string name="load_hint">Load</string>
    <string name="equipment_hint">Equipment</string>
    <string name="category_hint">Category</string>
    <string name="done_button">Save</string>
    <string name="name_hint_hint">Name</string>
    <string name="load_kg_hint">Kg</string>
    <string name="exercisesLabel">Exercises</string>
    <string name="workoutsLabel">Workouts</string>
    <string name="description_hint2">ex. Squeeze your glutes while getting up with the bar</string>
    <string name="equipment_hint2">ex. bar, kettle</string>
    <string name="addExerciseLabel">Add exercise</string>\
    <string name="editExerciseLabel">Edit exercise</string>


    <!-- login and register fragment -->
    <string name="loginUsernameHint">
        <font size="15">E-mail address</font>
    </string>
    <string name="loginPasswordHint">
        <font size="15">Password</font>
    </string>
    <string name="logoDesc">Logo</string>
    <string name="registerWithGoogle">Sign in with Google</string>
    <string name="errorSignIn">Wrong e-mail address or password</string>
    <string name="button_signUp">Sign up</string>
    <string name="errorGoogleSignIn">There was an error. Please check your Internet connection.</string>
    <string name="action_logOut">Sign out</string>
    <string name="closeAgainToExit">Press twice to close the app</string>
    <string name="registerFragment_signUpButtonText">Create an account</string>
    <string name="registerNameHint">Name</string>
    <string name="registerPasswordRepeatHint">Repeat the password</string>
    <string name="registerErrorData">Please, enter correct data</string>
    <string name="registerSuccess">Your account was successfully created!</string>
    <string name="registerFailure">There was an unexpected mistake. Please, try again later.</string>
    <string name="channel_name">fitbuddy_channel</string>
    <string name="channel_description">Channel description</string>
    <string name="default_notification_channel_id">default</string>
    <string name="workout_not_planned_yet">You have not planned any workout for that day yet!</string>
    <string name="exercise_name">Exercise name</string>
    <string name="exercise_description">This is an example of exercise description.</string>
    <string name="exercise_number">1.</string>
    <string name="exercise_category">Category</string>
    <string name="categoryImage">Category image</string>
    <string name="workout_name">Workout name</string>
    <string name="workout_initTime">Init date</string>
    <string name="workout_exercisesNumber">Number of exercises:</string>
    <string name="exercise_level">Difficulty level:</string>
    <string name="exerciseNumOfSets">Sets:</string>
    <string name="exerciseNumOfReps">Reps:</string>
    <string name="FitBuddy">Fit Buddy</string>
    <string name="choose_category">Choose the category</string>
    <string name="ok">OK</string>
    <string name="invalid_exercise_data">Please, fill in all the fields correctly</string>
    <string name="errorAddingExercise">Sorry, the operation could not be completed. Please, try again later.</string>
    <string name="dataSynchronized">Data synchronized successfully.</string>
    <string name="planButton">Plan this workout</string>
    <string name="planWorkout">Workout planning</string>
    <string name="chooseWhen">Choose date</string>
    <string name="workoutsPlanned">Your workout was planned successfully!</string>
    <string name="workoutsPlanningError">There was a problem. Please, try again.</string>
    <string name="addWorkoutToDay">Add workout</string>
    <string name="log_as_completed">LOG COMPLETED</string>
    <string name="logWorkoutCompleted">LOG AS COMPLETED</string>
    <string name="calendarLabel">Calendar</string>
    <string name="myActivityLabel">Me</string>
    <string name="my_workouts_history">My workouts history</string>
    <string name="operationError">Error occured. Task could not be completed.</string>
    <string name="updateSuccess">Exercise is updated!</string>
    <string name="saveSuccess">Exercise added successfully!</string>
    <string name="removeSuccess">Exercise was removed successfully.</string>
    <string name="noDatesChosen">At least date has to be chosen to plan the workout.</string>
    <string name="cancel">CANCEL</string>
    <string name="chooseExercise">Choose the exercise</string>
    <string name="addWorkoutLabel">Add workout</string>
    <string name="addExerciseToWorkout">Add exercise to workout</string>
    <string name="setsNumHint">Number of sets</string>
    <string name="repsNumHint">Number of reps</string>
    <string name="fillAlltheData">Number of sets and reps has to be defined.</string>
    <string name="addElement">Add element</string>
    <string name="workoutLoggedDone">Your workout was logged as done!</string>
    <string name="workoutLoggingFailure">There was a problem. Please, try again.</string>
    <string name="exerciseTime">Time interval:</string>
    <string name="timeIntervalHint">Time interval</string>
    <string name="timeMode">Time interval mode</string>
    <string name="noEquipment">no equipment</string>
    <string name="cantEditNorDelete">You can delete or edit only the data defined by you.</string>
    <string name="deleteWorkoutLabel">Delete the workout</string>
    <string name="deleteWorkoutContent">Are you sure you want to delete this workout?</string>
    <string name="deleteWorkoutContentCant">Workout can not be deleted because it is a part of at least one of your planned workouts.
    </string>
    <string name="errorOccured">Error occured. Task could not be completed.</string>
    <string name="workoutAddInvalidData">Name and at least one workout element have to be defined</string>
    <string name="workoutAdded">Workout added successfully!</string>
    <string name="removeWorkoutSuccess">Workout deleted</string>
    <string name="historyWorkouts">My workouts history</string>
    <string name="plannedDate">Date:</string>
    <string name="completed">Completed</string>
    <string name="logWorkout">Log workout completed</string>
    <string name="logWorkoutSubtitle">You are logging this workout as completed.</string>
    <string name="workoutLogAsDone">Your workout was logged as done!</string>
    <string name="equipment_hint3">Equipment:</string>
    <string name="chooseWorkout">Choose the workout</string>
    <string name="exerciseAdded">Exercise added successfully!</string>
    <string name="exerciseEdited">Exercise was updated!</string>
    <string name="workoutUpdated">Workout updated successfully!</string>
    <string name="notCompleted">NOT COMPLETED</string>
    <string name="deleteExerciseLabel">Delete the exercise</string>
    <string name="deleteExerciseContentCant">Exercise can not be deleted because it is a part of at least one of your workouts.</string>
    <string name="cantBeCompleted">Date of this planned workout is in future. You can’t log it as completed</string>
    <string name="planningFromCalendar">Plan workout for</string>
    <string name="editWorkoutLabel">Edit workout</string>
    <string name="reminder">Remember to exercise regularly! It prevents from diseases and keeps you in shape!</string>
    <string name="deleteExerciseContent">Are you sure you want to delete this exercise?</string>
</resources>
