<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_exercises"
                android:icon="@drawable/exercises_menu_img"
                android:title="@string/exercisesLabel"/>
        <item
                android:id="@+id/nav_add_exercise"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/workoutsLabel"/>

    </group>

    <item android:title="@string/communicateLabel">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/shareLabel"/>

        </menu>
    </item>

</menu>
