<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:weightSum="10">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:background="@color/primaryLightColor">

        <LinearLayout
                android:id="@+id/add_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--android:layout_marginStart="12dp"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:layout_marginEnd="12dp"-->
                <!--android:layout_marginBottom="12dp"-->
                <!--&gt;-->


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_exercise_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/name_hint_hint"
                    android:textColor="@color/primaryTextColor">


            </com.google.android.material.textfield.TextInputEditText>

            <TextView
                    android:id="@+id/hint_exercise_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/name_hint"
                    android:textColor="@color/primaryTextColor"/>


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_exercise_description"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="158dp"
                    android:maxEms="10"
                    android:maxLines="7"
                    android:hint="@string/description_hint2"
                    android:inputType="textMultiLine"
                    android:textColor="@color/primaryTextColor">

            </com.google.android.material.textfield.TextInputEditText>

            <TextView
                    android:id="@+id/hint_exercise_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/description_hint"
                    android:textColor="@color/primaryTextColor"/>


            <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:numStars="5"
                    android:stepSize="1" />

            <TextView
                    android:id="@+id/hint_kg_exercise_load"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/rating_hint" />


            <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/add_exercise_load"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:hint="@string/load_kg_hint"
                    android:inputType="number"
                    android:textColor="@color/primaryTextColor">

            </com.google.android.material.textfield.TextInputEditText>

            <TextView
                    android:id="@+id/hint_exercise_load"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/load_hint"
                    android:textColor="@color/primaryTextColor"/>


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_exercise_equipment"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/equipment_hint2"
                    android:textColor="@color/primaryTextColor"/>

            <TextView
                    android:id="@+id/hint_exercise_equipment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/equipment_hint"
                    android:textColor="@color/primaryTextColor"/>

            <Spinner
                    android:id="@+id/spinner_categories"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginBottom="28dp"
                    android:layout_marginTop="24dp"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:gravity="center"
                    android:textAlignment="gravity"
                    android:visibility="visible">

            </Spinner>

            <TextView
                    android:id="@+id/hint_exercise_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:text="@string/category_hint"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor">
            </TextView>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="56dp"
                    android:weightSum="3">

                <ImageButton
                        android:id="@+id/addPhotoButton"
                        android:layout_width="4dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center|center_horizontal|center_vertical"
                        android:layout_weight="1"
                        android:scaleType="centerInside"
                        android:src="@drawable/round_add_photo_alternate_black_18dp"
                        tools:ignore="contentDescription"
                        android:layout_margin="12dp"/>

                <ImageView
                        android:layout_width="100dp"
                        android:layout_height="140dp"
                        android:layout_margin="12dp"
                        android:layout_gravity="center|center_horizontal|center_vertical"
                        tools:ignore="contentDescription"
                        android:layout_weight="2"
                        android:scaleType="centerCrop"
                        android:id="@+id/add_imageView"
                        android:src="@drawable/exercises_menu_img"
                />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/saveButton"
            android:layout_width="100dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/primaryLightColor"
            android:backgroundTint="@color/primaryTextColor"
            android:backgroundTintMode="multiply"
            android:gravity="center"
            android:text="@string/done_button"
            android:textAllCaps="true"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp"
            android:visibility="visible"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:onClick="saveItem"/>


</RelativeLayout>