<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   android:orientation="vertical"
                                   android:layout_width="wrap_content"
                                   android:layout_height="wrap_content"
                                   app:cardCornerRadius="@dimen/cardView_radiusBig"
                                   android:layout_margin="@dimen/cardView_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView android:layout_width="0dp"
                  android:id="@+id/planWorkout_planHint"
                  android:layout_height="wrap_content"
                  android:text="@string/planWorkout"
                  app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textSize="24sp"/>
        <View android:layout_width="0dp" android:layout_height="2dp"
              app:layout_constraintTop_toBottomOf="@id/planWorkout_planHint"
              android:id="@+id/separator" android:background="@color/mainSeparatorColor"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        </View>

        <TextView
                android:text="@string/workout_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/planWorkoutName" app:layout_constraintTop_toBottomOf="@id/separator"
                android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:textSize="20sp" android:textStyle="bold"/>

        <Button android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/planWorkoutName"
                android:text="@string/chooseWhen"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/planWorkout_chooseWhen" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:textSize="18sp" android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

        <ListView android:layout_width="0dp"
                  app:layout_constraintTop_toBottomOf="@+id/planWorkout_chooseWhen"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintBottom_toTopOf="@+id/planWorkout_confirmButton"
                  android:id="@+id/planWorkout_datesList"
                  android:layout_height="wrap_content" android:layout_marginEnd="8dp"
                  android:layout_marginTop="8dp" android:layout_marginBottom="48dp"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="8dp"
                  android:textAlignment="center">
        </ListView>

        <Button android:layout_width="wrap_content"
                android:text="@string/ok"
                android:id="@+id/planWorkout_confirmButton"
                android:layout_height="wrap_content" android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>