<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_margin="@dimen/cardView_margin"
        app:cardBackgroundColor="@color/mainSeparatorColor"
        app:cardCornerRadius="@dimen/cardView_radius">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/cardView_margin">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:id="@+id/exerciseNumberInWorkout"
                  android:text="@string/exercise_number"
                  android:textSize="20sp"
                  android:layout_marginEnd="10dp"
                  android:gravity="center_vertical|center_horizontal" android:textColor="@color/mcgpalette0_500"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
        >

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/exerciseName"
                      android:text="@string/exercise_name"
                      android:textSize="17sp"
                      android:textStyle="bold"
                      android:layout_marginBottom="10dp" android:textColor="@color/primaryTextColor"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:lines="3"
                      android:id="@+id/exerciseDescription"
                      android:text="@string/exercise_description"
            />

            <!--<View android:layout_height="112dp" android:layout_width="139dp"-->
                  <!--android:background="@color/mcgpalette0_50" android:visibility="visible">-->

                <!--<TextView android:layout_width="match_parent"-->
                          <!--android:layout_height="wrap_content"-->
                          <!--android:id="@+id/exerciseCategory"-->
                          <!--android:text="@string/exercise_category"-->
                          <!--android:textSize="17sp"-->
                          <!--android:textStyle="bold"-->
                          <!--android:textColor="@color/mcgpalette0_600"-->
                          <!--android:layout_marginBottom="10dp"/>-->
            <!--</View>-->


        </LinearLayout>
    </LinearLayout>



</androidx.cardview.widget.CardView>