<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   android:orientation="vertical"
                                   android:layout_width="wrap_content"
                                   android:layout_height="wrap_content"
                                   app:cardCornerRadius="@dimen/cardView_radiusBig"
                                   android:layout_margin="@dimen/cardView_margin" android:id="@+id/cardView3">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView android:layout_width="350dp"
                  android:id="@+id/addexerciseToWorkoutLabel"
                  android:layout_height="wrap_content"
                  android:text="@string/addExerciseToWorkout"
                  app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textSize="24sp"/>
        <View android:layout_width="0dp" android:layout_height="2dp"
              app:layout_constraintTop_toBottomOf="@id/addexerciseToWorkoutLabel"
              android:id="@+id/separator" android:background="@color/mainSeparatorColor"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        </View>


        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="346dp"
                                                           android:layout_height="65dp"
                                                           android:layout_gravity="start"
                                                           android:id="@+id/exerciselayout"
                                                           app:layout_constraintTop_toBottomOf="@id/separator"
                                                           android:layout_marginTop="24dp"
                                                           app:layout_constraintStart_toStartOf="parent"
                                                           android:layout_marginStart="8dp"
                                                           android:layout_marginEnd="8dp"
                                                           app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp" app:srcCompat="@drawable/icons8weightlifting100"
                    android:id="@+id/workoutExerciseCategoryImage"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                    android:scaleType="fitXY"/>
            <TextView
                    android:text="@string/exercise_name"
                    android:layout_width="0dp"
                    android:fontFamily="@font/assistant_semibold"
                    android:layout_height="wrap_content" android:id="@+id/workoutExerciseItemAddName"
                    app:layout_constraintStart_toEndOf="@id/workoutExerciseCategoryImage"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp" android:textSize="16sp"
                    android:maxLines="2" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:id="@+id/setsLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/exerciselayout"
                android:layout_marginTop="8dp" app:layout_constraintEnd_toStartOf="@+id/repsLayout"
                android:layout_marginEnd="16dp">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/setsNumHint" android:textSize="16sp" android:id="@+id/setsNumber"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button android:layout_width="wrap_content"
                android:text="@string/ok"
                android:id="@+id/workoutElement_confirmButton"
                android:layout_height="wrap_content" android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/repsLayout"

                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/setsLayout"
                app:layout_constraintTop_toBottomOf="@id/exerciselayout"
                android:layout_marginStart="24dp" android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/repsNumHint" android:textSize="16sp" android:id="@+id/repsNumber"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button android:layout_width="0dp"
                android:text="@string/cancel"
                android:id="@+id/cancelWorkoutElement"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_height="wrap_content" android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toStartOf="@id/workoutElement_confirmButton"
                app:layout_constraintTop_toBottomOf="@id/repsLayout"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="24dp"
                android:layout_marginTop="32dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>